# parallellm

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
.github/instructions/: default.instructions.md
examples/: README.md  checkpoint_fsm.py  enzyme_tournament.py  example_checkpoint_recipe.py  example_tournament.py  simplest.py  simplest_batch.py  simplest_conversation.py  simplest_error.py  simplest_image.py  simplest_msg_state.py  simplest_throttle.py  simplest_tool.py
examples/advanced/: README.md
examples/checkpoint/: msg_state_checkpoint_recipe.py
examples/finetune/: simplest_finetune.py
examples/full/: example_full_batch.py
examples/tools/: msg_state_tool.py  simplest_search.py  simplest_structured_output.py  simplest_tool.py
experiments/: foo.py  output.md
parallellm/: __init__.py  types.py
parallellm/core/: ask.py  backend.py  calls.py  datastore.py  exception.py  gateway.py  hydrate.py  identity.py  manager.py  response.py  throttler.py
parallellm/file_io/: file_manager.py
parallellm/logging/: dash_logger.py  fancy.py
parallellm/provider/: anthropic.py  base.py  gemini.py  google.py  guess.py  hardcoded.py  openai.py  response_model.py  schemas.py
parallellm/testing/: fixtures.py  simple_backend.py  simple_mock.py
parallellm/tools/: auto_schema.py  server.py
parallellm/utils/: image.py  manip.py
tests/: TODO.md  conftest.py  test_examples.py
tests/integration/: test_checkpoint_examples.py  test_integration_examples.py  test_tournament_examples.py
tests/unit/: test_agent_context.py  test_hash_and_caching.py  (+6 more)
(+53 files in other folders)
